unpackaged/main/default/objects/CS_DFP_Actuals_Report_Data__c/CS_DFP_Actuals_Report_Data__c.object-meta.xml
<CustomObject>
    <description>Test DFP report</description>
    <label>DFP Actuals Report Data</label>
    <nameField>
        <displayFormat>DFPAR-{00000000}</displayFormat>
        <label>Row Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DFP Actuals Report Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>