unpackaged/main/default/objects/CS_DFP_Actuals_Report_Data__c/fields/Clicks__c.field-meta.xml
<CustomField>
    <fullName>Clicks__c</fullName>
    <description>Number of Clicks for the line in the period.</description>
    <inlineHelpText>Number of Clicks for the line in the period.</inlineHelpText>
    <label>Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>